@@ -44,10 +44,12 @@
 
         <tr>
             <td style="text-align: left;" colspan="2">
-
-                <a href={% url 'quiz_page' cid=quiz.course_id.id id=quiz.id %}>
-                    <input id="bgnQuizBtn" type="button" value="Begin Quiz">
+                <form method="post">
+                    {% csrf_token %}
+                    <a href={% url 'quiz_page' cid=quiz.course_id.id id=quiz.id %}>
+                    <input id="bgnQuizBtn" type="submit" value="Begin Quiz">
                 </a>
+                </form>
             <td></td>
             </td>
 
